--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>zyneonstudios</groupId>
     <artifactId>ZyneonAPI</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.2</version>
     <packaging>jar</packaging>
 
     <name>ZyneonAPI</name>
