--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ version: '${project.version}'
 main: com.zyneonstudios.api.Zyneon
 api-version: 1.19
 prefix: ZyneonAPI
-loadbefore: [ ProjectsBase, KnockIT, Lobbysystem, FFA, BungeeBase, SkyBlock ]
+loadbefore: [ ProjectsBase, KnockIT, Lobbysystem, Creative, FFA, BungeeBase, SkyBlock ]
 authors: [ ZyneonStudios, nerotvlive ]
 description: Base API for all Zyneon Studios subservers
 website: https://zyneonstudios.com
