--- a/src/main/resources/bungee.yml
+++ b/src/main/resources/bungee.yml
@@ -1,9 +1,11 @@
 name: ZyneonAPI
-main: live.nerotv.Preloader
-author: nerotvlive
 version: '${project.version}'
-website: https://nerotv.live/bungeebase
-description: BungeeBase by nerotvlive
+main: com.zyneonstudios.api.waterfall.Zyneon
+api-version: 1.19
+prefix: ZyneonAPI
+authors: [ ZyneonStudios, nerotvlive ]
+description: Base API for all Zyneon Studios subservers
+website: https://zyneonstudios.com
 
 commands:
   Ban:
